Add nginx module conf.

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,20 +4,42 @@ FROM ubuntu:22.04
 ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && apt-get -y upgrade && \
-    apt-get install -y libssl-dev g++ apt-utils autoconf automake && \
+    apt-get install -y libssl-dev apt-utils autoconf automake && \
     apt-get install -y build-essential libcurl4-openssl-dev libgeoip-dev liblmdb-dev libpcre++-dev libtool &&\
-    apt-get install -y libxml2-dev libyajl-dev pkgconf wget zlib1g-dev libpcre2-dev && \
-    apt-get install -y bison flex gcc g++ make wget && \
-    apt-get install -y dnsutils vim coreutils gpg wget lsb-release
+    apt-get install -y libxml2-dev libyajl-dev pkgconf zlib1g-dev libpcre2-dev && \
+    apt-get install -y bison flex gcc g++ make && \
+    apt-get install -y dnsutils vim coreutils gpg
 
-
-WORKDIR /tmp/
+RUN apt-get install -y wget
 
 ADD ./modules/ /tmp/modules/
-ADD ./conf/ /
+
+# Install dynamic modules.
+WORKDIR /tmp/modules/
+
+RUN wget https://github.com/SpiderLabs/ModSecurity-nginx/releases/download/v1.0.3/modsecurity-nginx-v1.0.3.tar.gz
+RUN tar -xzvf modsecurity-nginx-v1.0.3.tar.gz
+
+# Install modsecurity library.
+WORKDIR /tmp/
+
+RUN wget https://github.com/SpiderLabs/ModSecurity/releases/download/v3.0.8/modsecurity-v3.0.8.tar.gz
+RUN tar -xvf modsecurity-v3.0.8.tar.gz
+
+WORKDIR /tmp/modsecurity-v3.0.8/
+RUN ./build.sh && ./configure && make -j4 && make install
+
+# Install core rule set.
+WORKDIR /tmp/
+RUN wget https://github.com/coreruleset/coreruleset/archive/refs/tags/v3.3.4.tar.gz
+RUN tar -xzvf v3.3.4.tar.gz
+
+# Build nginx from source.
+WORKDIR /tmp/
 RUN wget http://nginx.org/download/nginx-1.23.3.tar.gz
 RUN tar -xzvf nginx-1.23.3.tar.gz
-RUN cd ./nginx-1.23.3
+
+WORKDIR /tmp/nginx-1.23.3/
 
 RUN ./configure \
     --sbin-path=/usr/nginx/sbin/nginx \
@@ -32,13 +54,9 @@ RUN ./configure \
     --with-http_v2_module \
     --with-http_geoip_module \
     --with-http_stub_status_module \
-    --user=nginx \
-    --group=nginx \
-    --add-dynamic-module=$BUILD_DIR/dynamic_modules/modsecurity-nginx-v1.0.3 \
-    --add-dynamic-module=$BUILD_DIR/dynamic_modules/testcookie-nginx-module-master \
-    --add-dynamic-module=$BUILD_DIR/dynamic_modules/traffic-accounting-nginx-module-2.0 \
-    --add-dynamic-module=$BUILD_DIR/dynamic_modules/ngx_cache_purge-purge_all \
-    --add-dynamic-module=$BUILD_DIR/dynamic_modules/headers-more-nginx-module-0.34 \
+    --user=root \
+    --group=root \
+    --add-dynamic-module=/tmp/modules/modsecurity-nginx-v1.0.3 \
     --without-http_scgi_module \
     --without-http_grpc_module \
     --without-http_empty_gif_module \
@@ -60,6 +78,16 @@ RUN ./configure \
 
 RUN make -j4 && make install
 
+ADD ./conf/nginx.conf /usr/nginx/conf/
+ADD ./conf/modules/ /usr/nginx/conf/
+
+ADD ./conf/rules/ /usr/nginx/conf/
+
+WORKDIR /usr/nginx/conf/rules
+
+
+RUN mkdir -p /data/nginx/cache/
+
 WORKDIR /home/
 
-CMD ["/usr/nginx/sbin/nginx", "-g" ,"'daemon off;'"]
+CMD ["/usr/nginx/sbin/nginx", "-g" ,"daemon off;"]
