--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -1,14 +1,10 @@
-user nginx nginx;
+user root root;
 
 worker_processes auto;
 worker_rlimit_nofile 100000;
 pcre_jit on;
 
 load_module ../modules/ngx_http_modsecurity_module.so;
-load_module ../modules/ngx_http_testcookie_access_module.so;
-load_module ../modules/ngx_http_accounting_module.so;
-load_module ../modules/ngx_http_cache_purge_module.so;
-load_module ../modules/ngx_http_headers_more_filter_module.so;
 
 events {
 	worker_connections 1000;
